--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^9.22.0",
     "expo": "~52.0.40",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
@@ -47,6 +48,7 @@
     "expo-web-browser": "~14.0.2",
     "formik": "^2.4.6",
     "nativewind": "^4.1.23",
+    "prettier": "^3.5.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
