--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@gluestack-ui/select": "^0.1.31",
     "@gluestack-ui/switch": "^0.1.29",
     "@gluestack-ui/toast": "^1.0.9",
+    "@gorhom/bottom-sheet": "^5",
     "@legendapp/motion": "^2.4.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
