Implemented carousel and extended icons library

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@gluestack-ui/button": "^1.0.14",
     "@gluestack-ui/form-control": "^0.1.19",
     "@gluestack-ui/icon": "^0.1.26",
+    "@gluestack-ui/image": "^0.1.17",
     "@gluestack-ui/input": "^0.1.38",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
@@ -48,7 +49,9 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "formik": "^2.4.6",
+    "lucide-react-native": "^0.483.0",
     "nativewind": "^4.1.23",
+    "pinar": "^0.12.2",
     "prettier": "^3.5.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
