--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@gluestack-ui/icon": "^0.1.26",
     "@gluestack-ui/image": "^0.1.17",
     "@gluestack-ui/input": "^0.1.38",
+    "@gluestack-ui/modal": "^0.1.41",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
     "@gluestack-ui/select": "^0.1.31",
     "@gluestack-ui/switch": "^0.1.29",
+    "@gluestack-ui/textarea": "^0.1.24",
     "@gluestack-ui/toast": "^1.0.9",
     "@gorhom/bottom-sheet": "^5",
     "@legendapp/motion": "^2.4.0",
