--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.6.1",
+    "@rnmapbox/maps": "^10.1.37",
     "axios": "^1.8.4",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.22.0",
@@ -44,6 +45,7 @@
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
+    "expo-location": "^18.0.8",
     "expo-router": "~4.0.19",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
