--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
     "@gluestack-ui/select": "^0.1.31",
+    "@gluestack-ui/spinner": "^0.1.15",
     "@gluestack-ui/switch": "^0.1.29",
     "@gluestack-ui/textarea": "^0.1.24",
     "@gluestack-ui/toast": "^1.0.9",
