--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "^3.17.4",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "~4.4.0",
