--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "expo-updates": "~0.27.4",
     "expo-web-browser": "~14.0.2",
     "formik": "^2.4.6",
+    "just-debounce-it": "^3.2.0",
     "lucide-react-native": "^0.483.0",
     "nativewind": "^4.1.23",
     "pinar": "^0.12.2",
