--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@gorhom/bottom-sheet": "^5",
     "@legendapp/motion": "^2.4.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-firebase/app": "^22.1.0",
+    "@react-native-firebase/crashlytics": "^22.1.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.6.1",
@@ -43,6 +45,7 @@
     "eslint": "^9.22.0",
     "expo": "~52.0.40",
     "expo-blur": "~14.0.3",
+    "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
