chore: se actualizó el identificador del paquete en app.json y se modificaron las credenciales de Apple en eas.json

--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.markuswater.meparqueoapp",
+      "bundleIdentifier": "com.bambailabs.meparqueoapp",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       },
