--- a/eas.json
+++ b/eas.json
@@ -36,9 +36,9 @@
   "submit": {
     "production": {
       "ios": {
-        "appleId": "lambdaa27@gmail.com",
-      "ascAppId": "6743828128",
-      "appleTeamId": "2FMKMARG4T"
+        "appleId": "marcoportacio4@gmail.com",
+      "ascAppId": "6747217841",
+      "appleTeamId": "RXWY584T2H"
       }
     }
   }
