--- a/app.json
+++ b/app.json
@@ -47,7 +47,7 @@
       [
         "expo-location",
         {
-          "locationWhenInUsePermission": "Show current location on map."
+          "locationWhenInUsePermission": "We use your location to show nearby parking spots and help you navigate to them from where you are. This improves your experience by making it easier to find and reach available parking."
         }
       ],
       [
