--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "^3.17.4",
+    "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
