--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.10",
+    "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.19",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
@@ -78,6 +79,7 @@
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "~4.4.0",
+    "react-native-star-rating-widget": "^1.9.2",
     "react-native-svg": "^15.11.2",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
