fix: se actualizó la ruta del icono de notificación en app.json para utilizar notification_icon.png en lugar de icon.png

--- a/app.json
+++ b/app.json
@@ -70,7 +70,7 @@
       [
         "expo-notifications",
         {
-          "icon": "./assets/images/icon.png",
+          "icon": "./assets/images/notification_icon.png",
           "color": "#ffffff",
           "defaultChannel": "default",
           "enableBackgroundRemoteNotifications": false
