--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@expo/html-elements": "0.4.2",
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "~14.0.4",
     "@gluestack-ui/accordion": "^1.0.14",
     "@gluestack-ui/actionsheet": "^0.2.52",
     "@gluestack-ui/button": "^1.0.14",
@@ -35,7 +35,7 @@
     "@gluestack-ui/toast": "^1.0.9",
     "@gorhom/bottom-sheet": "^5",
     "@legendapp/motion": "^2.4.0",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/analytics": "^22.2.1",
     "@react-native-firebase/app": "^22.1.0",
     "@react-native-firebase/crashlytics": "^22.1.0",
@@ -70,17 +70,18 @@
     "prettier": "^3.5.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-keyboard-controller": "^1.17.5",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-reanimated": "^3.17.4",
+    "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^4.0.2",
-    "react-native-safe-area-context": "^5.3.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-star-rating-widget": "^1.9.2",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
