--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "MeParqueo",
     "slug": "meparqueoapp",
-    "version": "1.0.5",
+    "version": "1.0.6",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
@@ -62,6 +62,9 @@
         {
           "ios": {
             "useFrameworks": "static"
+          },
+          "android": {
+            "abiFilters": ["arm64-v8a", "armeabi-v7a"]
           }
         }
       ],
