--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@gorhom/bottom-sheet": "^5",
     "@legendapp/motion": "^2.4.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/analytics": "^22.2.1",
     "@react-native-firebase/app": "^22.1.0",
     "@react-native-firebase/crashlytics": "^22.1.0",
