refactor: Se añadió la clave de "entitlements" en el archivo de configuración de la aplicación para habilitar el acceso a información de Wi-Fi.

--- a/app.json
+++ b/app.json
@@ -14,7 +14,10 @@
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       },
-      "googleServicesFile": "./GoogleService-Info.plist"
+      "googleServicesFile": "./GoogleService-Info.plist",
+      "entitlements": {
+        "com.apple.developer.networking.wifi-info": true
+      }
     },
     "android": {
       "adaptiveIcon": {
