refactor: Se eliminó la dependencia @react-native-community/netinfo y se implementó expo-network para la verificación de conexión a Internet, actualizando la lógica en la inicialización de la aplicación. Además, se simplificó el componente RecentParkingsList al eliminar el pie de lista y se realizaron ajustes menores en otros componentes.

--- a/app.json
+++ b/app.json
@@ -14,10 +14,7 @@
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       },
-      "googleServicesFile": "./GoogleService-Info.plist",
-      "entitlements": {
-        "com.apple.developer.networking.wifi-info": true
-      }
+      "googleServicesFile": "./GoogleService-Info.plist"
     },
     "android": {
       "adaptiveIcon": {
