--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "@gorhom/bottom-sheet": "^5",
     "@legendapp/motion": "^2.4.0",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/analytics": "^22.2.1",
     "@react-native-firebase/app": "^22.1.0",
     "@react-native-firebase/crashlytics": "^22.1.0",
@@ -55,6 +54,7 @@
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.10",
+    "expo-network": "~7.0.5",
     "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.19",
     "expo-splash-screen": "~0.29.22",
